--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -3,12 +3,12 @@ version: 4.0.0
 # Icarus theme variant, can be "default" or "cyberpunk"
 variant: default
 # Path or URL to the website's logo
-logo: #/img/logo.svg
-    text: Jaakko
+logo: /images/colacloudonline.png
+    # text: ColaCloudOnline
 # Page metadata configurations
 head:
     # URL or path to the website's icon
-    favicon: /img/favicon.svg
+    favicon: /images/favicon.ico
     # Web application manifests configuration
     # https://developer.mozilla.org/en-US/docs/Web/Manifest
     manifest:
