--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 自用笔记本
 subtitle: ''
 description: ''
 keywords: null
-author: Jaakko
+author: 自用
 language: zh-CN
 timezone: ''
 url: http://example.com
