--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -228,7 +228,7 @@ widgets:
         # Author name
         author: Jaakko
         # Author title
-        author_title: 记录解决问题的方式
+        author_title: 记录生活琐事以及解决问题的方式
         # Author's current location
         location: Los Angles
         # URL or path to the avatar image
