--- a/themes/amazing/_config.yml
+++ b/themes/amazing/_config.yml
@@ -248,7 +248,7 @@ widgets:
         # Author name
         author: Jaakko的生活日记
         # Author title
-        author_title: 实现自己想要的生活
+        author_title: Do Whatevery I Want
         # Author's current location
         location: 广东深圳
         # URL or path to the avatar image
