--- a/themes/amazing/_config.yml
+++ b/themes/amazing/_config.yml
@@ -153,7 +153,7 @@ comment:
     distraction_free_mode: false
     has_hot_recommend: false # 是否有热门推荐
     has_latest_comment: false #是否有最新评论
-    proxy:  #解决登录后403问题
+    proxy:  https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token #解决登录后403问题
 # comment:
 #     type: valine
 #     app_id: rOtVIhvG3kd7QkMKe3naSU9R-gzGzoHsz
