--- a/themes/amazing/_config.yml
+++ b/themes/amazing/_config.yml
@@ -79,11 +79,10 @@ navbar:
         类别: /categories
         标签: /tags
         关于我: /about
-        相册: /album
+        碎碎念: /self-talking
         留言: /message
-        自说自话: /self-talking
+        相册: /album
         音乐: /music
-        视频: /media
     # Links to be shown on the right of the navigation bar
     links:
         Join Gitter:
