--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Jaakko的生活日记
 subtitle: ''
 description: ''
 keywords: null
-author: 自用
+author: jaakko
 language: zh-CN
 timezone: ''
 url: https://blog.suflive.com
