--- a/themes/amazing/_config.yml
+++ b/themes/amazing/_config.yml
@@ -8,7 +8,7 @@ logo: https://img.wang.232232.xyz/img/2022/05/16/1652695460_736762.png #/img/log
 # Page metadata configurations
 head:
     # URL or path to the website's icon
-    favicon: https://cdn.jsdelivr.net/gh/removeif/removeif-demo@latest/img/favicon.png #/img/favicon.svg
+    favicon: https://img.wang.232232.xyz/img/2022/05/18/-diary.png #/img/favicon.svg
     # Open Graph metadata
     # https://hexo.io/docs/helpers.html#open-graph
     open_graph:
