--- a/themes/amazing/_config.yml
+++ b/themes/amazing/_config.yml
@@ -23,7 +23,7 @@ head:
         url: #https://removeif.github.io/
         # Page cover (og:image) (optional)
         # You should leave this blank for most of the time
-        image: https://cdn5.maocdn.cn/img/2022/04/20/photo_2019-11-02_01-59-34.md.jpg
+        image: https://avatars.githubusercontent.com/u/37134258?v=4
         # Site name (og:site_name) (optional)
         # You should leave this blank for most of the time
         site_name: Jaakko的生活日记
